kubernetes/main/apps/networking/external-services/ingresses/gitea.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app gitea
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: nas
  ports:
    - name: http
      port: 8687
      protocol: TCP
      targetPort: 8687
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  labels:
    app.kubernetes.io/name: gitea
spec:
  ingressClassName: internal
  rules:
    - host: &host gitea.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitea
                port:
                  number: 8687
  tls:
    - hosts:
        - *host
