kubernetes/main/apps/networking/external-services/ingresses/minio.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app minio
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  type: ExternalName
  externalName: nas
  ports:
    - name: api
      port: 9000
      protocol: TCP
      targetPort: 9000
    - name: webui
      port: 9001
      protocol: TCP
      targetPort: 9001
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-admin
  labels:
    app.kubernetes.io/name: minio-admin
spec:
  ingressClassName: internal
  rules:
    - host: &host minio-admin.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9001
  tls:
    - hosts:
        - *host
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
  labels:
    app.kubernetes.io/name: minio-api
spec:
  ingressClassName: external
  rules:
    - host: &host minio.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
  tls:
    - hosts:
        - *host
